# File_Rename

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  conanfile.txt
.github/: requirements.sh
.github/workflows/: build.yml
Sources/: Button.cpp  Button.hpp  InputBox.cpp  InputBox.hpp  Main.cpp  RenameClass.cpp  RenameClass.hpp  Sources.cmake
Tests/: Tests.cmake  Tests.cpp
